force-app/main/default/objects/Merchandise__c/Merchandise__c.object-meta.xml
<CustomObject>
    <label>Merchandise Details</label>
    <nameField>
        <label>Merchandise Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Merchandise Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>