force-app/main/default/objects/Merchandise__c/fields/Merchandise_Price__c.field-meta.xml
<CustomField>
    <fullName>Merchandise_Price__c</fullName>
    <label>Merchandise Price Per Unit</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>