force-app/main/default/objects/Merchandise__c/fields/Sold_Item__c.field-meta.xml
<CustomField>
    <fullName>Sold_Item__c</fullName>
    <label>Sold Item</label>
    <summarizedField>LineItem__c.LineItem_Stock__c</summarizedField>
    <summaryForeignKey>LineItem__c.Merchendise__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>