force-app/main/default/objects/Merchandise__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>country__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BOSTON</fullName>
            </value>
            <value>
                <fullName>CHICAGO</fullName>
            </value>
            <value>
                <fullName>DELHI</fullName>
            </value>
            <value>
                <fullName>GOA</fullName>
            </value>
            <value>
                <fullName>GUJARAT</fullName>
            </value>
            <value>
                <fullName>NEW YORK</fullName>
            </value>
            <value>
                <fullName>PUNJAB</fullName>
            </value>
            <value>
                <fullName>UTTAR PRADESH</fullName>
            </value>
            <value>
                <fullName>WASHINGTON DC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>