force-app/main/default/objects/Merchandise__c/fields/Total_Remaing_Items__c.field-meta.xml
<CustomField>
    <fullName>Total_Remaing_Items__c</fullName>
    <formula>Merchandise_Stock__c  -  Sold_Item__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Remaing Items</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>